# next-rayjam

./: CMakeLists.txt  LICENSE  README.md  build.bat
.github/workflows/: linux.yml  macos.yml  webassembly.yml
include/: car.h  core.h  scene_manager.h
src/: Makefile  car.cpp  core.cpp  resource.h  scene_manager.cpp
src/resources/: levels.ldtk  palette_switch.fs  style.rgs  test2.ldtk
